# generic_format

./: .clang-tidy  .gitignore  CMakeLists.txt  Changelog.org  Doxyfile  README.org  TODO.org
src/: CMakeLists.txt
src/example/: CMakeLists.txt  demo.cpp
src/examples/: CMakeLists.txt  benchmark.cpp  datestreams.cpp  demo.cpp  packet.hpp
src/main/: CMakeLists.txt
src/main/generic_format/: accessors.hpp  ast.hpp  dsl.hpp  exceptions.hpp  generic_format.hpp  helper.hpp  primitives.hpp
src/main/generic_format/accessor/: accessor.hpp
src/main/generic_format/ast/: adapted_struct.hpp  ast.hpp  base.hpp  inference.hpp  placeholder_container.hpp  placeholder_map.hpp  raw.hpp  reference.hpp  reference_accessor.hpp  repeated.hpp  sequence.hpp  size_container.hpp  string.hpp  variable.hpp  versioned.hpp
src/main/generic_format/datastructures/: dense_multimap.hpp  dense_reversible_multimap.hpp
src/main/generic_format/lookup/: lookup.hpp  lookup_table.hpp
src/main/generic_format/mapping/: container.hpp  mapping.hpp  mappings.hpp  range.hpp  struct_adaptor.hpp  tuple.hpp  vector.hpp
src/main/generic_format/targets/: base.hpp  iostream.hpp  unbounded_memory.hpp
src/tests/: CMakeLists.txt  compile_tests.cpp  dense_multimap_tests.cpp  dense_reversible_multimap_tests.cpp  format_tests.cpp  lookup_table_tests.cpp  test_common.hpp
